--- a/Animation Pic Style/card.css
+++ b/Animation Pic Style/card.css
@@ -72,7 +72,7 @@ button{
 {
     height: 100%;
     width: 100%;
-    background: url(photo.png);
+    background: url(photo.jpg);
     position: absolute;
     bottom: 0;
     background-size: 100% 100%;
